sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:5: error: not found: value i
    for(k<-0 to getNombreValeurs()-(i+1)){
                                    ^AlgBubbleSort1:7: error: value switch is not a member of Unit
      if (plusPetit(k+1,k)) {echange(k+1,k)} switch=true{
                                             ^